# neuroforge

./: .gitignore  README.md  log.md  main.py  pyproject.toml  state.json  wk01_broadcasting.ipynb  wk01_numpy.ipynb
